@@ -15,7 +15,10 @@
 		<p>There are some special icon filenames that can be used to generate an icon image without using an external file. 
 		These all <em>require</em> you to specify a <em>maxwidth</em> and <em>maxheight</em> which are then used as the size of the 
 		icon. The 'magic filenames' are: <ul><li>'box' - to produce a square cornered box.</li><li>'rbox' - 
-		to produce a round-cornered box</li><li>'round' - to produce a circle or ellipse.</li></ul>The colours for these "artificial icons" are specified 
+		to produce a round-cornered box</li><li>'round' - to produce a circle or ellipse.</li>
+		<li>'inpie' &amp; 'outpie' - to produce a pie-chart of either the in or out value relative to it's maximum. The colouring options on this are likely to change in a future version.</li>
+		<li>'nink' - to produce a circular 'yin-yang'-style symbol, with each half showing the in and out values. The colouring options on this are likely to change in a future version.</li>
+		</ul>The colours for these "artificial icons" are specified 
 		using the AICONFILLCOLOR and AICONOUTLINECOLOR keywords.</p>
 		<p>The second form allows you to specify a maximum width and height for the icon. If the PNG file that you specify is bigger or smaller than this size, then it is automatically scaled up (or down) in proportion, so that it fits into a box of the size you specify.</p>
 		<p>The size of the icon image is used by LABELOFFSET to decided how far to move the label, if you use compass-point offsets.</p>
@@ -24,7 +27,8 @@
 
 </description>
 		    <changes>
-			<change version="0.95">Added Artificial Icon support.</change>
+			<change version="0.96">Added inpie, outpie and nink.</change>
+			<change version="0.95">Added Artificial Icon support - round, rbox and box.</change>
 			<change version="0.95">Added Icon colourising support.</change>
                 <change version="0.9">Added 'special token' support.</change>
 	<change version="0.9">Added JPEG and GIF support.</change>
